Import from Spotify
You can now import from a Spotify album URL. Rather than register an
application (basically, doing it the correct way) Spotify provides the
JSON in the HTML page itself so we don't have to manage secrets.

--- a/import/serverless.yml
+++ b/import/serverless.yml
@@ -20,3 +20,15 @@ functions:
             parameters:
               querystrings:
                 url: true
+  
+  spotify:
+    handler: spotify.import
+    events:
+      - http:
+          path: /spotify
+          method: GET
+          cors: true
+          request:
+            parameters:
+              querystrings:
+                url: true
