Import from Discogs
Now you can import a tracklist from a Discogs album using the URL.

--- a/import/serverless.yml
+++ b/import/serverless.yml
@@ -21,6 +21,18 @@ functions:
               querystrings:
                 url: true
   
+  discogs:
+    handler: discogs.import
+    events:
+      - http:
+          path: /discogs
+          method: GET
+          cors: true
+          request:
+            parameters:
+              querystrings:
+                url: true
+  
   spotify:
     handler: spotify.import
     events:
