Fixing brittle imports
Fixes several bugs with the importers. It now parses the HTML which is a
little more reliable than a regexp.

I have also replaced the tests with a jest test suite.

--- a/import/package.json
+++ b/import/package.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
-    "node-fetch": "^2.6.6"
+    "node-fetch": "^2.6.6",
+    "node-html-parser": "^5.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
